chore: installed aws cdk dependecies in docker container

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,8 +1,18 @@
 FROM mcr.microsoft.com/devcontainers/javascript-node:1-22-bookworm
 
-# [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+# Install AWS CLI v2
+# See: https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html
+RUN apt-get update && \
+    apt-get install -y unzip curl groff less && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "/tmp/awscliv2.zip" && \
+    unzip /tmp/awscliv2.zip -d /tmp && \
+    /tmp/aws/install && \
+    rm -rf /tmp/aws /tmp/awscliv2.zip && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Install TypeScript, AWS CDK, and other useful global Node.js tools for AWS development
+RUN su node -c "npm install -g typescript aws-cdk@latest ts-node@latest eslint prettier @types/node"
+
 
 # [Optional] Uncomment if you want to install an additional version of node using nvm
 # ARG EXTRA_NODE_VERSION=10
