--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,11 +6,34 @@ on:
       - main
       - staging
       - test
+  pull_request:
+    branches:
+      - main
+      - staging
+      - test
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
   deploy:
     runs-on: ubuntu-latest
-    # Map 'main' branch to 'production' environment, else use branch name
+    needs: test
+    if: github.event_name == 'push'
     environment: ${{ github.ref_name == 'main' && 'production' || github.ref_name }}
     steps:
       - name: Checkout code
