--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,16 +1,12 @@
-name: Deploy CDK Stack
+name: Deploy Production Stack
 
 on:
   push:
     branches:
       - main
-      - staging
-      - test
   pull_request:
     branches:
       - main
-      - staging
-      - test
 
 jobs:
   test:
@@ -34,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push'
-    environment: ${{ github.ref_name == 'main' && 'production' || github.ref_name }}
+    environment: production
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -63,10 +59,6 @@ jobs:
 
       - name: Deploy CDK stack
         run: |
-          # Use 'production' prefix for main branch, else use branch name
-          if [ "${GITHUB_REF_NAME}" = "main" ]; then
-            STACK_NAME="production-entix-infra"
-          else
-            STACK_NAME="${GITHUB_REF_NAME}-entix-infra"
-          fi
-          npx cdk deploy "$STACK_NAME" --require-approval never
+          # Set environment variable for CDK app
+          export ENV="production"
+          npx cdk deploy "production-entix-infra" --require-approval never
